--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.2",
-    "react": "18.2.0",
-    "react-native": "0.74.1",
-    "expo-router": "~3.5.11",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "expo-linking": "~6.3.1",
-    "expo-constants": "~16.0.1",
     "@gorhom/bottom-sheet": "^4.6.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-picker/picker": "^2.7.5",
+    "expo": "~51.0.2",
+    "expo-constants": "~16.0.1",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.11",
     "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0"
   },
   "devDependencies": {
